--- a/icds-constitution.tex
+++ b/icds-constitution.tex
@@ -54,11 +54,9 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
     \item The society aims to:
         \begin{enumerate}
             \item promote the furtherance of drama and the art of theatre in the Imperial College community.
-            \item present regular theatrical productions of the highest possible quality.
             \item facilitate interaction with the student drama community outside of Imperial College.
-            \item provide support for the development of talent, the encouragement of new writing, and the development of novel and innovative artistic techniques in all fora of theatrical production.
             \item provide technical support for theatrical productions of DramSoc and any other Club, Society or Project of the Arts and Entertainments Management Group.
-            \item promote the furtherance of its Members' technical excellence in the fields of design and engineering for theatre and live music.
+            \item promote the furtherance of its Members' technical excellence in the fields of design and engineering for theatre and other live events.
         \end{enumerate}
     \item The society shall strive to achieve these objectives as its commitment to its membership. 
 \end{enumerate}
@@ -105,7 +103,7 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
     \item \policyBye{G26,} \policyCspp{78} Should an office fall empty, a by-election shall be held at a General Meeting called by the President, which shall be subject to the same regulations as the elections held at the Annual General Meeting.
 \end{enumerate}
 
-\subsection{Meetings}
+\subsection{Meetings of the Committee}
 \begin{enumerate}[resume]
     \item Meetings of the Committee shall be called by the President, and shall be held at least monthly.
     \item A meeting must be called by the President upon the request of any three members of the Committee.
@@ -117,7 +115,7 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
     \item Any Member of the Society may submit to the Secretary a request to attend any Committee Meeting as a guest. This request must be made in writing at least three College Days in advance of the meeting. Such a request shall be considered by the Committee and may only be rejected by vote, and with good reason provided to the guest.
     \item The Committee may invite other Members of the Society, other Members of the Union, or others outside of the Union as guests of the Committee, as it sees fit. 
     \item Guests of the Committee must ask permission from the Chair of the meeting to speak (ordinarily the President).
-    \item The Secretary or their delegated authority shall circulate agenda for meetings of the Committee no less than two College days in advance of the meeting, and must publish minutes of that meeting within three College days following the meeting. These minutes must be accepted as a true and accurate record of the previous meeting at the next meeting of the Committee.
+    \item The Secretary or their delegated authority shall circulate agenda for meetings of the Committee no less than one College day in advance of the meeting, and must publish minutes of that meeting within three College days following the meeting. These minutes must be accepted as a true and accurate record of the previous meeting at the next meeting of the Committee.
     \item A member of the Committee may choose to speak \textit{in camera}, during which minutes shall not be taken and non-members of the Committee must leave.
     \item Committee members must strive to attend all meetings of the Committee, and are obliged to submit apologies to the Secretary if they are unable to do so for whatever reason.
 \end{enumerate}
@@ -132,7 +130,6 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
 
 \subsection{Officers}
 \begin{enumerate}[resume]
-    \item \policyPub{4} The Pub. Officer, Secretary, and Vice President are delegated authority by the President to authorise publicity.
     \item \newthought{The President:}
         \begin{enumerate}
             \item \policyCspp{8} shall be the senior officer of the Society.
@@ -140,9 +137,9 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
             \item is ultimately responsible for the artistic output of the Society.
             \item \policyCspp{83.i} shall be, along with the Treasurer, financially responsible for the Society.
             \item is responsible for ensuring that the Society is run according to this constitution.
-            \item shall possess the casting vote in the event of a tie in a vote at a Committee meeting or General Meeting of the Society.
+            \item shall possess the casting vote in the event of a tie in a decision-making vote (as distinct from an election) at a Committee meeting or General Meeting of the Society.
             \item shall deputise or direct other members of the Committee to deputise for vacant positions, should this become necessary.
-            \item shall liaise with the other society (for the purpose of Alumni integration) and the other other society (for the purpose of making a song and dance).
+            \item shall liaise with COMUS to further alumnus integration.
             \item shall be responsible for ensuring that risks arising during the execution of the Society's activities are appropriately identified and mitigated.
             \item \policyHs{26.3.4} shall be responsible for informing the Union of any controls and provisions made to identify and mitigate risks to society Members (to include the annual submission of a risk assessment).
             \item shall be responsible for ensuring that all plays produced by the Society have assigned to them a \textsc{Producer}, who shall be a Member of the Society responsible for the execution of the play (to include its financial aspects), and who shall be answerable to the Committee. This Producer must not also be the show's director.
@@ -159,7 +156,8 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
             \item \policyCspp{83.i} shall be, along with the President, financially responsible for the Society.
             \item shall carry out the day-to-day financial duties of the Society.
             \item shall maintain accounts describing the Society's finances, in accordance with accepted accounting rules and practices.
-            \item shall maintain accounts for each of the Society's plays, including the allocation of a budget, and recording information about ticket-takings.
+            \item shall ensure that an appropriately-qualified person (usually the Producer) of every show financially sponsored by the Society keeps appropriate accounts for the show.
+            \item shall inspect the budget for every show financially sponsored by the Society, and if they deem it to be acceptable, approve it.
             \item shall be responsible for ensuring the long-term financial viability of the Society, by holding reserves or instigating other structural measures as may be necessary to safeguard the objectives of the Society.
             \item shall be responsible for participating in the Union's annual budgeting process.
         \end{enumerate}
@@ -172,9 +170,10 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
         \end{enumerate}
     \item \newthought{The Acting Director:}
         \begin{enumerate}
-            \item shall have overall responsibility for the Society's thespian activities.
+            \item shall have overall responsibility for the Society's acting, writing and directing activities.
             \item shall have responsibility for the training of Members of the Society in fields relating to acting, to include the organisation of acting workshops.
             \item shall be responsible for ensuring that a Director can be found for the Society's plays, deputising if necessary.
+            \item shall be responsible for the Society's representation at drama festivals as directed by the Committee.
         \end{enumerate}
     \item \newthought{The Technical Director:}
         \begin{enumerate}
@@ -189,6 +188,7 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
             \item \policyCspEquip{A6} shall ensure that appropriate records are kept and fees are lodged with the Treasurer when equipment is hired.
             \item shall be responsible for the maintenance of the DramSoc Storeroom.
             \item shall be responsible for liaising with the Union over the management, maintenance and upkeep of the Union Concert Hall.
+            \item shall represent those aspects of the Society that fall within their remit to the Union, College, other societies, and any other clients.
         \end{enumerate}
     \item \newthought{The Lighting Director:}
         \begin{enumerate}
@@ -222,7 +222,7 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
         \end{enumerate}
     \item \newthought{The Ordinary Committee Member:}
         \begin{enumerate}
-            \item shall contribute to the running of the Society in an ordinary fashion, as directed from time to time by the President or the Committee.
+            \item shall contribute to the running of the Society by assisting the committee as appropriate.
         \end{enumerate}
 \end{enumerate}
 
@@ -288,7 +288,7 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
 \section{Constitution}
 \begin{enumerate}[resume]
     \item \policyBye{B6,} \policyCspp{81} This document serves as the constitution for the Imperial College Dramatic Society.
-    \item \policyCspp{36} Changes to this constitution may be made solely at a quorate General Meeting of the Society by a $\sfrac{2}{3}$ majority vote of the voting membership of the Society.
+    \item \policyCspp{36} Changes to this constitution may be made solely at a quorate General Meeting of the Society by a $\sfrac{2}{3}$ majority vote.
     \item This constitution shall be reviewed annually by the Committee.
     \item Any proposal to change this constitution must be made in writing to the Secretary as part of an agendum proposal for the General Meeting in question, who shall subsequently promulgate the proposed change as an addendum to the agendum according to the schedule set out above.
     \item For the avoidance of doubt, since {\S}B16 of the bye-laws requires any electronic vote taken as a consequence of and subsequent to an inquorate meeting to obtain only a simple majority to pass, changes to this constitution cannot be ratified via this mechanism, and nor can any other decision that requires a two-thirds majority.
