Change name of Design Director to SPCDir
As discussed at commitee on 10/3

--- a/icds-constitution.tex
+++ b/icds-constitution.tex
@@ -89,7 +89,7 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
             \item Technical Director
             \item Lighting Director
             \item Sound Director
-            \item Design Director
+            \item Set, Props and Costumes Director
             \item Pub. Officer
             \item Social Secretary
             \item Systems Administrator
@@ -206,7 +206,7 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
             \item shall be responsible for advising the Committee on the maintenance of an appropriate level of technical capability in the sound department.
             \item shall be responsible for the training of other Members of the Society in fields relating to sound design and engineering.
         \end{enumerate}
-    \item \newthought{The Design Director:}
+    \item \newthought{The Set, Props and Costumes Director:}
         \begin{enumerate}
             \item shall be responsible for the storage and upkeep of the Society's set, costume props.
             \item shall be responsible for the upkeep of the Society's workshop spaces.
