Updates committee size number.

--- a/icds-constitution.tex
+++ b/icds-constitution.tex
@@ -79,7 +79,7 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
     \item All officers sitting on the Committee must be Members of the Society.
     \item \policyCspp{66} Any officer holding a voting position on the Committee must be a Full Member of the Society.
     \item No officer may hold more than one position upon the Committee.
-    \item \policyCspp{65} The Committee shall consist of eleven voting officers holding the following positions:
+    \item \policyCspp{65} The Committee shall consist of thirteen voting officers holding the following positions:
         \begin{enumerate}
             \item President
             \item Vice-President
