Fix SPCDir role typo.

--- a/icds-constitution.tex
+++ b/icds-constitution.tex
@@ -208,7 +208,7 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
         \end{enumerate}
     \item \newthought{The Set, Props and Costumes Director:}
         \begin{enumerate}
-            \item shall be responsible for the storage and upkeep of the Society's set, costume props.
+            \item shall be responsible for the storage and upkeep of the Society's props, costumes, and items of set.
             \item shall be responsible for the upkeep of the Society's workshop spaces.
             \item shall be responsible for the management and maintenance of all construction tools and instructing Members on their correct and safe use.
             \item shall provide support, guidance and assistance to set, prop and costume designers for the Society's shows.
