Clarifies sub-committee membership ambiguity.

--- a/icds-constitution.tex
+++ b/icds-constitution.tex
@@ -123,8 +123,8 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
 \subsection{Subcommittees}
 \begin{enumerate}[resume]
     \item The Committee may create further committees, without derogating from its responsibility, as its members see fit. Such committees shall be sub-committees of the Committee and shall be chaired and constituted as the Committee sees fit.
+    \item Any member of the Committee shall be entitled to sit on any sub-committee so created, and may do so upon successful supplication to the Committee.
     \item Such sub-committees shall not have decision making powers binding on the Society, but may make recommendations to the Committee.
-    \item Any member of the Committee shall be entitled to sit on any sub-committee.
     \item All members of sub-committees need only to be Members of the Union, not of the Society.
 \end{enumerate}
 
