Adds draft watermark

--- a/icds-constitution.tex
+++ b/icds-constitution.tex
@@ -5,6 +5,10 @@
 \usepackage{amsmath}
 \usepackage{xfrac}
 \usepackage{units}
+\usepackage{draftwatermark}
+
+\SetWatermarkText{Draft}
+\SetWatermarkScale{1.5}
 
 \title{Imperial College Dramatic Society Constitution}
 % \author[The ICDS Committee]{The ICDS Committee}
