SysAdmin should probably look after Servers.

--- a/icds-constitution.tex
+++ b/icds-constitution.tex
@@ -238,8 +238,9 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
         \begin{enumerate}
             \item shall be responsible for the design, upkeep, security and maintenance of the computer systems and networks utilised in the day-to-day running of the Society, to include:
                 \begin{enumerate}
-                    \item Routers and switches
+                    \item Servers
                     \item Workstations
+                    \item Routers and switches
                     \item E-Mail accounts
                     \item Mailing lists
                     \item Domains and DNS records
