Changes by Peter Griffin

--- a/icds-constitution.tex
+++ b/icds-constitution.tex
@@ -60,9 +60,9 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
             \item promote the furtherance of drama and the art of theatre in the Imperial College community.
             \item facilitate interaction with the student drama community outside of Imperial College.
             \item provide technical support for theatrical productions of DramSoc and any other Club, Society or Project of the Arts and Entertainments Management Group.
-            \item promote the furtherance of its Members' technical excellence in the fields of design and engineering for theatre and other live events.
+            \item promote the furtherance of its Members' technical experience in the fields of design and engineering for theatre and other live events.
         \end{enumerate}
-    \item The society shall strive to achieve these objectives as its commitment to its membership. 
+    \item The society, as managed by the Committee, shall strive to achieve these objectives as its commitment to its membership. 
 \end{enumerate}
 
 \section{Membership}
@@ -102,7 +102,8 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
     \item \policyCspp{65} The term of office for all positions runs from the 1st of August to the 31st of July.
     \item A position of office may be vacated by: \begin{enumerate}
             \item Resignation
-            \item `RON' being elected at the AGM
+            \item End of term of office
+            \item Failure to hold full membership of the Society
             \item Death
         \end{enumerate}
     \item Any officer ceasing to qualify for Full Membership of the Society must resign their position.
@@ -114,14 +115,14 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
     \item Meetings of the Committee shall be called by the President, and shall be held at least monthly.
     \item A meeting must be called by the President upon the request of any three members of the Committee.
     \item The President or their delegated authority shall chair meetings of the Committee.
-    \item Meetings of the Committee shall normally be held in the DramSoc Storeroom on Level 2M of the Imperial College Union.
     \item At least five College days' written notice of meetings of the Committee shall be provided by the Secretary to members of the Committee.
     \item Only members of the Committee holding one of the aforementioned voting positions may vote.
     \item \policyBye{B11} Quorum of the Committee shall be 7.
-    \item Any Member of the Society may submit to the Secretary a request to attend any Committee Meeting as a guest. This request must be made in writing at least three College Days in advance of the meeting. Such a request shall be considered by the Committee and may only be rejected by vote, and with good reason provided to the guest.
+    \item Any Member of the Society may observe committee meetings.
     \item The Committee may invite other Members of the Society, other Members of the Union, or others outside of the Union as guests of the Committee, as it sees fit. 
     \item Guests of the Committee must ask permission from the Chair of the meeting to speak (ordinarily the President).
     \item The Secretary or their delegated authority shall circulate agenda for meetings of the Committee no less than one College day in advance of the meeting, and must publish minutes of that meeting within three College days following the meeting. These minutes must be accepted as a true and accurate record of the previous meeting at the next meeting of the Committee.
+    \item An archive of all meeting minutes should be made publicly available by the secretary, except where those minutes relate to any reserved or confidential matters, including without limitation staff-related or disciplinary matters.
     \item A member of the Committee may choose to speak \textit{in camera}, during which minutes shall not be taken and non-members of the Committee must leave.
     \item Committee members must strive to attend all meetings of the Committee, and are obliged to submit apologies to the Secretary if they are unable to do so for whatever reason.
 \end{enumerate}
@@ -148,7 +149,7 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
             \item shall liaise with COMUS to further alumnus integration.
             \item shall be responsible for ensuring that risks arising during the execution of the Society's activities are appropriately identified and mitigated.
             \item \policyHs{26.3.4} shall be responsible for informing the Union of any controls and provisions made to identify and mitigate risks to society Members (to include the annual submission of a risk assessment).
-            \item shall be responsible for ensuring that all plays produced by the Society have assigned to them a \textsc{Producer}, who shall be a Member of the Society responsible for the execution of the play (to include its financial aspects), and who shall be answerable to the Committee. This Producer must not also be the show's director.
+            \item shall be responsible for ensuring that all plays produced by the Society have assigned to them a \textsc{Producer}, who shall be a Member of the Society responsible for the execution of the play (to include its financial aspects), and who shall be answerable to the Committee. This Producer must not also be the show's director, except in the case of simple plays if considered appropriate by the committee.
             \item the authority to authorise publicity may be revoked or further devolved as the President sees fit.
     \end{enumerate}
     \item \newthought{The Vice-President:}
@@ -162,13 +163,14 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
             \item \policyCspp{83.i} shall be, along with the President, financially responsible for the Society.
             \item shall carry out the day-to-day financial duties of the Society.
             \item shall maintain accounts describing the Society's finances, in accordance with accepted accounting rules and practices.
-            \item shall ensure that an appropriately-qualified person (usually the Producer) of every show financially sponsored by the Society keeps appropriate accounts for the show.
-            \item shall inspect the budget for every show financially sponsored by the Society, and if they deem it to be acceptable, approve it.
+            \item shall ensure that an appropriately-qualified person (usually the Producer) of every show produced by the Society keeps appropriate accounts for the show.
+            \item shall inspect the budget for every show produced by the Society, and if they deem it to be acceptable, approve it.
             \item shall be responsible for ensuring the long-term financial viability of the Society, by holding reserves or instigating other structural measures as may be necessary to safeguard the objectives of the Society.
             \item shall be responsible for participating in the Union's annual budgeting process.
         \end{enumerate}
     \item \newthought{The Honorary Secretary:}
         \begin{enumerate}
+            \item shall be responsible for minuting all meetings of the society and maintaining a public archive of them.
             \item shall be responsible for keeping records of the running of the Society and maintaining its archives in good order.
             \item shall be responsible for communicating announcements to the membership of the Society and the Committee.
             \item shall be responsible for ensuring that all documentation required by the CSP Policy, \S83 are submitted as required.
@@ -194,7 +196,8 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
             \item \policyCspEquip{A6} shall ensure that appropriate records are kept and fees are lodged with the Treasurer when equipment is hired.
             \item shall be responsible for the maintenance of the DramSoc Storeroom.
             \item shall be responsible for liaising with the Union over the management, maintenance and upkeep of the Union Concert Hall.
-            \item shall represent those aspects of the Society that fall within their remit to the Union, College, other societies, and any other clients.
+            \item shall represent the Society to the Union, College, other societies, and any other clients for all relevant matters as described above.
+            \item shall be assisted in these aims by the Lighting Director, the Sound Director and the Set, Props and Costumes Director as described below.
         \end{enumerate}
     \item \newthought{The Lighting Director:}
         \begin{enumerate}
@@ -213,7 +216,6 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
     \item \newthought{The Set, Props and Costumes Director:}
         \begin{enumerate}
             \item shall be responsible for the storage and upkeep of the Society's props, costumes, and items of set.
-            \item shall be responsible for the upkeep of the Society's workshop spaces.
             \item shall be responsible for the management and maintenance of all construction tools and instructing Members on their correct and safe use.
             \item shall provide support, guidance and assistance to set, prop and costume designers for the Society's shows.
             \item shall manage the hire of set, costumes and props to other Union bodies and to external parties.
@@ -221,7 +223,7 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
     \item \newthought{The Pub. Officer:}
         \begin{enumerate}
             \item shall be responsible for ensuring that the Society and its activities are publicised to Members of the College.
-            \item shall design, establish, and maintain a coherent consistent brand image for the Society.
+            \item shall be responsible for the design of the Society's publicity materials and shall maintain a coherent consistent brand image for the Society.
             \item shall ensure that publicity is orchestrated for the Society's plays.
             \item shall be responsible for maintaining the content of the Society's website.
             \item shall be responsible for managing the Society's social media accounts.
