Small fixes, += technical excellence

--- a/icds-constitution.tex
+++ b/icds-constitution.tex
@@ -49,20 +49,20 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
     \item The `Union Constitution' refers to the Constitution of the Union that is currently in force, as passed by the Union and College Councils and as may be amended from time to time according to \S12 of said Constitution.
     \item The `Union Bye-Laws' or `Bye-laws' shall refer to the \textit{Bye-laws of Imperial College Union} as passed by the Union and College Councils and as may be amended from time to time according to \S11 of the Union Constitution.
     \item The `CSP Policy' shall refer to the \textit{ICU Clubs, Societies and Projects Policy}.
-    \item A Full Member of the Union is any Member of the Union that is not an Associate Member.
+    \item A Full Member of the Union is any Member of the Union who is not an Associate Member of the Union, as defined by \S13 and \S18 of the Union Constitution.
     \item Written notice, for the purpose of this document, shall be that as defined by \S114 of the Union Constitution.
 \end{enumerate}
 
 \section{Objectives}
 \begin{enumerate}[resume]
-    \item The society aims to:
+    \item The Society aims to:
         \begin{enumerate}
             \item promote the furtherance of drama and the art of theatre in the Imperial College community.
             \item facilitate interaction with the student drama community outside of Imperial College.
             \item provide technical support for theatrical productions of DramSoc and any other Club, Society or Project of the Arts and Entertainments Management Group.
-            \item promote the furtherance of its Members' technical experience in the fields of design and engineering for theatre and other live events.
+            \item promote the furtherance of its Members' technical excellence and experience in the fields of design and engineering for theatre and other live events.
         \end{enumerate}
-    \item The society, as managed by the Committee, shall strive to achieve these objectives as its commitment to its membership. 
+    \item The Society, as managed by its Committee, shall strive to achieve these objectives as its commitment to its membership.
 \end{enumerate}
 
 \section{Membership}
@@ -100,11 +100,11 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
             \item Ordinary Committee Member
         \end{enumerate}
     \item \policyCspp{65} The term of office for all positions runs from the 1st of August to the 31st of July.
-    \item A position of office may be vacated by: \begin{enumerate}
-            \item Resignation
-            \item End of term of office
-            \item Failure to hold full membership of the Society
-            \item Death
+    \item A position of office may be vacated by an officer: \begin{enumerate}
+            \item Resigning
+            \item Reaching the end of their term of office
+            \item Failing to hold full membership of the Society
+            \item Becoming deceased
         \end{enumerate}
     \item Any officer ceasing to qualify for Full Membership of the Society must resign their position.
     \item \policyBye{G26,} \policyCspp{78} Should an office fall empty, a by-election shall be held at a General Meeting called by the President, which shall be subject to the same regulations as the elections held at the Annual General Meeting.
@@ -118,11 +118,11 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
     \item At least five College days' written notice of meetings of the Committee shall be provided by the Secretary to members of the Committee.
     \item Only members of the Committee holding one of the aforementioned voting positions may vote.
     \item \policyBye{B11} Quorum of the Committee shall be 7.
-    \item Any Member of the Society may observe committee meetings.
+    \item Any Member of the Society may observe Committee meetings.
     \item The Committee may invite other Members of the Society, other Members of the Union, or others outside of the Union as guests of the Committee, as it sees fit. 
     \item Guests of the Committee must ask permission from the Chair of the meeting to speak (ordinarily the President).
     \item The Secretary or their delegated authority shall circulate agenda for meetings of the Committee no less than one College day in advance of the meeting, and must publish minutes of that meeting within three College days following the meeting. These minutes must be accepted as a true and accurate record of the previous meeting at the next meeting of the Committee.
-    \item An archive of all meeting minutes should be made publicly available by the secretary, except where those minutes relate to any reserved or confidential matters, including without limitation staff-related or disciplinary matters.
+    \item An archive of all meeting minutes should be made publicly available by the Secretary, except where those minutes relate to reserved or confidential matters, including without limitation staff-related or disciplinary matters.
     \item A member of the Committee may choose to speak \textit{in camera}, during which minutes shall not be taken and non-members of the Committee must leave.
     \item Committee members must strive to attend all meetings of the Committee, and are obliged to submit apologies to the Secretary if they are unable to do so for whatever reason.
 \end{enumerate}
@@ -148,7 +148,7 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
             \item shall deputise or direct other members of the Committee to deputise for vacant positions, should this become necessary.
             \item shall liaise with COMUS to further alumnus integration.
             \item shall be responsible for ensuring that risks arising during the execution of the Society's activities are appropriately identified and mitigated.
-            \item \policyHs{26.3.4} shall be responsible for informing the Union of any controls and provisions made to identify and mitigate risks to society Members (to include the annual submission of a risk assessment).
+            \item \policyHs{26.3.4} shall be responsible for informing the Union of any controls and provisions made to identify and mitigate risks to Society Members (to include the annual submission of a risk assessment).
             \item shall be responsible for ensuring that all plays produced by the Society have assigned to them a \textsc{Producer}, who shall be a Member of the Society responsible for the execution of the play (to include its financial aspects), and who shall be answerable to the Committee. This Producer must not also be the show's director, except in the case of simple plays if considered appropriate by the committee.
             \item the authority to authorise publicity may be revoked or further devolved as the President sees fit.
     \end{enumerate}
@@ -163,14 +163,14 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
             \item \policyCspp{83.i} shall be, along with the President, financially responsible for the Society.
             \item shall carry out the day-to-day financial duties of the Society.
             \item shall maintain accounts describing the Society's finances, in accordance with accepted accounting rules and practices.
-            \item shall ensure that an appropriately-qualified person (usually the Producer) of every show produced by the Society keeps appropriate accounts for the show.
+            \item shall ensure that an appropriately-qualified person (usually the Producer) keeps appropriate accounts for every show produced by the Society.
             \item shall inspect the budget for every show produced by the Society, and if they deem it to be acceptable, approve it.
             \item shall be responsible for ensuring the long-term financial viability of the Society, by holding reserves or instigating other structural measures as may be necessary to safeguard the objectives of the Society.
             \item shall be responsible for participating in the Union's annual budgeting process.
         \end{enumerate}
     \item \newthought{The Honorary Secretary:}
         \begin{enumerate}
-            \item shall be responsible for minuting all meetings of the society and maintaining a public archive of them.
+            \item shall be responsible for minuting all meetings of the Society and maintaining a public archive of such minutes.
             \item shall be responsible for keeping records of the running of the Society and maintaining its archives in good order.
             \item shall be responsible for communicating announcements to the membership of the Society and the Committee.
             \item shall be responsible for ensuring that all documentation required by the CSP Policy, \S83 are submitted as required.
@@ -197,7 +197,7 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
             \item shall be responsible for the maintenance of the DramSoc Storeroom.
             \item shall be responsible for liaising with the Union over the management, maintenance and upkeep of the Union Concert Hall.
             \item shall represent the Society to the Union, College, other societies, and any other clients for all relevant matters as described above.
-            \item shall be assisted in these aims by the Lighting Director, the Sound Director and the Set, Props and Costumes Director as described below.
+            \item shall be assisted in these aims and responsibilities by the Lighting Director, the Sound Director and the Set, Props and Costumes Director as described below.
         \end{enumerate}
     \item \newthought{The Lighting Director:}
         \begin{enumerate}
@@ -216,6 +216,7 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
     \item \newthought{The Set, Props and Costumes Director:}
         \begin{enumerate}
             \item shall be responsible for the storage and upkeep of the Society's props, costumes, and items of set.
+            \item shall be responsible for the upkeep of the Society's prop, costume, and set storage spaces.
             \item shall be responsible for the management and maintenance of all construction tools and instructing Members on their correct and safe use.
             \item shall provide support, guidance and assistance to set, prop and costume designers for the Society's shows.
             \item shall manage the hire of set, costumes and props to other Union bodies and to external parties.
@@ -223,12 +224,13 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
     \item \newthought{The Pub. Officer:}
         \begin{enumerate}
             \item shall be responsible for ensuring that the Society and its activities are publicised to Members of the College.
-            \item shall be responsible for the design of the Society's publicity materials and shall maintain a coherent consistent brand image for the Society.
+            \item shall be responsible for the design of the Society's publicity materials.
+            \item shall maintain a coherent and consistent brand image for the Society.
             \item shall ensure that publicity is orchestrated for the Society's plays.
             \item shall be responsible for maintaining the content of the Society's website.
             \item shall be responsible for managing the Society's social media accounts.
-            \item shall be responsible for the production of society merchandise.
-            \item shall ensure that photographs are taken and archived of every society show, along with that show's publicity material.
+            \item shall be responsible for the production of Society merchandise.
+            \item shall ensure that photographs are taken and archived of every Society show, along with that show's publicity material.
             \item \policyPub{4} may, at the President's discretion, be delegated authority by the President to authorise publicity.
         \end{enumerate}
     \item \newthought{The Social Secretary:}
@@ -307,13 +309,13 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
 
 \section{Tankards}
 \begin{enumerate}[resume]
-    \item \policyTankard The society must maintain Officer Tankards for the following positions:
+    \item \policyTankard The Society must maintain Officer Tankards for the following positions:
         \begin{enumerate}
             \item President
             \item Treasurer
             \item Technical Director
         \end{enumerate}
-    \item The society may maintain other tankards, as so resolved upon by the Committee.
+    \item The Society may maintain other tankards, as so resolved upon by the Committee.
 \end{enumerate}
 
 \section{Constitution}
