--- a/icds-constitution.tex
+++ b/icds-constitution.tex
@@ -121,10 +121,10 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
     \item Any Member of the Society may observe Committee meetings.
     \item The Committee may invite other Members of the Society, other Members of the Union, or others outside of the Union as guests of the Committee, as it sees fit. 
     \item Guests of the Committee must ask permission from the Chair of the meeting to speak (ordinarily the President).
-    \item The Secretary or their delegated authority shall circulate agenda for meetings of the Committee no less than one College day in advance of the meeting, and must publish minutes of that meeting within three College days following the meeting. These minutes must be accepted as a true and accurate record of the previous meeting at the next meeting of the Committee.
+    \item The Secretary or their delegated authority shall circulate agenda for meetings of the Committee no less than one College day in advance of the meeting, and must publish minutes of that meeting within three College days following the meeting. These minutes must either be accepted as a true and accurate record of the previous meeting at the next meeting of the Committee, or amended as appropriate.
     \item An archive of all meeting minutes should be made publicly available by the Secretary, except where those minutes relate to reserved or confidential matters, including without limitation staff-related or disciplinary matters.
     \item A member of the Committee may choose to speak \textit{in camera}, during which minutes shall not be taken and non-members of the Committee must leave.
-    \item Committee members must strive to attend all meetings of the Committee, and are obliged to submit apologies to the Secretary if they are unable to do so for whatever reason.
+    \item Committee members must strive to attend all Meetings of the Committee, and are obliged to submit apologies to the Secretary if they are unable to do so for whatever reason.
 \end{enumerate}
 
 \subsection{Subcommittees}
@@ -272,7 +272,7 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
     \item No fewer than ten College days' notice of a general meeting must be given in writing to Members of the Society.
     \item Members may submit agenda for discussion at a general meeting to the Secretary no fewer than five College days before a general meeting. Any agendum so submitted must be proposed by a Member and seconded by at least two other Members.
     \item The Secretary must promulgate the agenda for the General meeting to the Members of the Society in writing no fewer than four College days in advance of a general meeting.
-    \item The first agendum of any general meeting must be to accept the minutes of the previous general meeting, or to note any corrections as upheld by vote, if necessary.
+    \item The first agendum of any general meeting must be to accept or reject by vote the minutes of the previous general meeting, or to note any corrections as upheld by vote if necessary.
     \item The Secretary or their delegated authority must record accurate minutes of the General meeting, which must be published in writing to the Members of the Society no greater than three College days subsequent to the meeting.
     \item Any Member of the Society may submit an opinion on any agenda to the Secretary \textit{in absentia}, which must be read out at the meeting by the Secretary in their stead.
     \item All decisions are made exclusively by the voting membership of the Society.
@@ -298,8 +298,9 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
             \item must promulgate to all Members of the Society via the Secretary details of the arrangements for balloting, nomination and complaints no fewer than ten College days in advance of the AGM.
         \end{enumerate}
     \item Only voting Members of the Society may cast votes in the election.
-    \item Only Members who have been nominated by a Full Member of the Society, and subsequently seconded by two Full Members of the Society, may stand for election.
-    \item Candidates may be nominated and seconded at the AGM, so long as the above condition is satisfied.
+    \item Only Members who have been nominated by a Full Member of the Society and subsequently seconded by a different Full Member of the Society may stand for election.
+    \item The nominator or the seconder of any candidate may not be the same person as the nominee.
+    \item Candidates may be nominated and seconded at the AGM, so long as the above two conditions are satisfied.
     \item \policyBye{G14} Manifestos must be provided by all nominees, and may either be:
         \begin{enumerate}
             \item written, and submitted in advance in accordance with a timetable determined by the returning officer, or
