--- a/icds-constitution.tex
+++ b/icds-constitution.tex
@@ -71,7 +71,9 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
     \item \policyBye{B6} The voting membership of the Society is all of the Full Members of the Society.
     \item \policyCspp{67} Full Members of the Imperial College Union are exclusively able to become Full Members of the Society.
     \item \policyCspp{71} Associate Members of the Union may become Non-Voting Members of the Society.
-    \item Sir Walter Plinge is offered honourary Non-Voting Membership of the Society.
+    \item The Society shall have as its mascot a Cat, named ``Mistifer Cat''.
+    \item ``Mistifer Cat'' shall be stuffed.
+    \item Sir Walter Plinge and Mistifer Cat are offered honourary Non-Voting Membership of the Society.
     \item \policyCspp{17} Full and Associate Members of the Union may freely join the Society, subject to their paying any fee as may from time-to-time be stipulated by the Committee. If such a fee is charged, it shall be in accordance with any minimum specified in Union Policy.
     \item \policyAE{5.3,} \policyBye{B2} Union Members entitled to \textit{ex officio} membership are Non-Voting Members of the Society, unless they join the Society as a Full Member, satisfying all of the requirements placed thereupon.
 \end{enumerate}
@@ -298,6 +300,7 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
             \item must promulgate to all Members of the Society via the Secretary details of the arrangements for balloting, nomination and complaints no fewer than ten College days in advance of the AGM.
         \end{enumerate}
     \item Only voting Members of the Society may cast votes in the election.
+    \item The vote to `Re-Open Nominations' shall be represented by Mistifer Cat in each election.
     \item Only Members who have been nominated by a Full Member of the Society and subsequently seconded by a different Full Member of the Society may stand for election.
     \item The nominator or the seconder of any candidate may not be the same person as the nominee.
     \item Candidates may be nominated and seconded at the AGM, so long as the above two conditions are satisfied.
