Changes from the DramSoc AGM

--- a/icds-constitution.tex
+++ b/icds-constitution.tex
@@ -59,8 +59,8 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
         \begin{enumerate}
             \item promote the furtherance of drama and the art of theatre in the Imperial College community.
             \item facilitate interaction with the student drama community outside of Imperial College.
-            \item provide technical support for theatrical productions of DramSoc and any other Club, Society or Project of the Arts and Entertainments Management Group.
-            \item promote the furtherance of its Members' technical excellence and experience in the fields of design and engineering for theatre and other live events.
+            \item provide technical support for theatrical productions of DramSoc and of any other Club, Society or Project of the Arts and Entertainments Management Group.
+            \item promote the furtherance of its Members' experience and excellence in the fields of theatre and other live events.
         \end{enumerate}
     \item The Society, as managed by its Committee, shall strive to achieve these objectives as its commitment to its membership.
 \end{enumerate}
@@ -124,8 +124,11 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
     \item The Committee may invite other Members of the Society, other Members of the Union, or others outside of the Union as guests of the Committee, as it sees fit. 
     \item Guests of the Committee must ask permission from the Chair of the meeting to speak (ordinarily the President).
     \item The Secretary or their delegated authority shall circulate agenda for meetings of the Committee no less than one College day in advance of the meeting, and must publish minutes of that meeting within three College days following the meeting. These minutes must either be accepted as a true and accurate record of the previous meeting at the next meeting of the Committee, or amended as appropriate.
-    \item An archive of all meeting minutes should be made publicly available by the Secretary, except where those minutes relate to reserved or confidential matters, including without limitation staff-related or disciplinary matters.
-    \item A member of the Committee may choose to speak \textit{in camera}, during which minutes shall not be taken and non-members of the Committee must leave.
+    \item An archive of all non-reserved meeting minutes should be made publicly available by the Secretary.
+    \item A member of the Committee may request at a meeting that minutes be denoted as reserved, either in part or in full.
+    \item Reserved minutes may be promulgated only to members of the Committee, and, upon request, to the President, a Deputy President, or the Chair of the Society's management group.
+    \item Whilst reserved minutes are being taken, non-members of the Committee may be asked to leave by the meeting's Chair.
+    \item Reserved minutes are to be made public and published 10 years after the meeting to which they relate.
     \item Committee members must strive to attend all Meetings of the Committee, and are obliged to submit apologies to the Secretary if they are unable to do so for whatever reason.
 \end{enumerate}
 
