--- a/icds-constitution.tex
+++ b/icds-constitution.tex
@@ -12,7 +12,7 @@
 
 \title{Imperial College Dramatic Society Constitution}
 % \author[The ICDS Committee]{The ICDS Committee}
-\date{Proposed at the Emergency General Meeting on 03/11/15}
+\date{Proposed at the General Meeting on 03/11/15}
 
 \newcommand{\policyOffset}{12pt}
 
@@ -73,7 +73,7 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
     \item \policyCspp{71} Associate Members of the Union may become Non-Voting Members of the Society.
     \item The Society shall have as its mascot a Cat, named ``Mistifer Cat''.
     \item ``Mistifer Cat'' shall be stuffed.
-    \item Sir Walter Plinge and Mistifer Cat are offered honourary Non-Voting Membership of the Society.
+    \item Sir Walter Plinge and Mistifer Cat are offered honorary Non-Voting Membership of the Society.
     \item \policyCspp{17} Full and Associate Members of the Union may freely join the Society, subject to their paying any fee as may from time-to-time be stipulated by the Committee. If such a fee is charged, it shall be in accordance with any minimum specified in Union Policy.
     \item \policyAE{5.3,} \policyBye{B2} Union Members entitled to \textit{ex officio} membership are Non-Voting Members of the Society, unless they join the Society as a Full Member, satisfying all of the requirements placed thereupon.
 \end{enumerate}
@@ -125,17 +125,18 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
     \item The President or their delegated authority shall chair meetings of the Committee.
     \item At least five College days' written notice of planned meetings of the Committee shall be provided by the Secretary to members of the Committee.
     \item Unplanned meetings may be held with shorter notice if there is a good reason to do so.
-    \item Only voting officers of the Committee may vote and attend Committee meetings, aside from exceptions made below.
+    \item Only officers of the Committee may attend Committee meetings, aside from exceptions made below.
     \item \policyBye{B11} Quorum of the Committee shall be 50\%+1 of the officers of the Committee.
-    \item The Committee may invite other Members of the Society, other Members of the Union, or others outside of the Union as Guests of the Committee, as it sees fit. 
     \item Any Member of the Society may observe Committee meetings as a Guest of the Committee.
+    \item The Committee may invite other Members of the Union, or others outside of the Union as Guests of the Committee, as it sees fit.
     \item Guests of the Committee must ask permission from the Chair of the meeting to speak (ordinarily the President).
     \item The Secretary or their delegated authority shall circulate agenda for meetings of the Committee no less than one College day in advance of the meeting.
-    \item The Secretary must publish minutes of a meeting to the general public within ten College days of the minutes' approval as a true and accurate record of the meeting to which they refer by the Committee.
-    \item Members may submit a request to view non-reserved minutes which are yet to be approved by the Committee to the Committee. The Committee must then allow the member to view unapproved minutes within ten College days provided the minutes have first been shown to attendees of the meeting and any comments noted. It should be made clear that these minutes are unpublished and unapproved.
+    \item The Secretary must circulate to the Committee a draft of the meeting's minutes within three college days of the meeting.
+    \item Members may submit to the Secretary a request to view the draft non-reserved minutes. The Secretary must provide to the member the draft minutes no earlier than three College days after the draft minutes have been circulated to the Committee. Before the minutes are provided to the member, attendees to the meeting must be given the opportunity to make comment on the draft and have these comments appended. It should be made clear that these minutes are unpublished and unapproved.
+    \item The Secretary must publish minutes of a meeting to the general public within three College days of the minutes' approval as a true and accurate record of the meeting to which they refer by the Committee.
     \item An archive of all non-reserved meeting minutes should be made publicly available by the Secretary.
-    \item A member of the Committee may request that minutes be denoted as reserved, either in part or in full, and reasons for the reservations should be included in either the unreserved minutes, the reserved minutes, or both. This request may be made at any time prior to publication.
-    \item Reserved minutes may be distributed only to members of the Committee, and, upon request, to the President, a Deputy President, or the Chair of the Society's management group.
+    \item \textit{In extremis}, a member of the Committee may request that minutes be denoted as reserved, either in part or in full, and reasons for the reservation must be included in either the unreserved minutes, the reserved minutes, or both. An indication that minutes were reserved must be present in the unreserved minutes. A request to reserve minutes may be made at any time prior to the publication of the minutes publicly.
+    \item Reserved minutes may be distributed only to members of the Committee, and, upon request, to the President of the Union, a Deputy President of the Union, or the Chair of the Society's Management Group.
     \item Whilst reserved minutes are being taken, Guests of the Committee may be asked to leave by the meeting's Chair.
     \item Committee members must strive to attend all Meetings of the Committee, and are obliged to submit apologies to the Secretary if they are unable to do so for whatever reason.
 \end{enumerate}
@@ -148,7 +149,7 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
     \item All members of sub-committees need only to be Members of the Union, not of the Society.
 \end{enumerate}
 
-\subsection{Offices}
+\subsection{Officers}
 \begin{enumerate}[resume]
     \item \newthought{The President:}
         \begin{enumerate}
@@ -157,22 +158,16 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
             \item is responsible for ensuring that the Society is run according to this constitution.
             \item shall possess the casting vote in the event of a tie in a decision-making vote (as distinct from an election) at a Committee meeting or General Meeting of the Society.
             \item shall deputise or direct other members of the Committee to deputise for vacant positions, should this become necessary.
-            \item \policyHs{26.3.4} shall be responsible for informing the Union of any controls and provisions made to identify and mitigate risks to Society Members (to include the annual submission of a risk assessment).
     \end{enumerate}
     \item \newthought{The Vice-President:}
         \begin{enumerate}
             \item shall deputise for the President in their absence.
-            \item \policyPub{4} may be delegated authority by the President to authorise publicity.
         \end{enumerate}
     \item \newthought{The Treasurer:}
         \begin{enumerate}
             \item \policyCspp{83.i} shall be, along with the President, financially responsible for the Society.
+            \item shall maintain accounts describing the Society's finances, in accordance with accepted accounting rules and practices.
             \item shall be responsible for ensuring the long-term financial viability of the Society, by holding reserves or instigating other structural measures as may be necessary to safeguard the objectives of the Society.
-            \item shall be responsible for participating in the Union's annual budgeting process.
-        \end{enumerate}
-    \item \newthought{The Honorary Secretary:}
-        \begin{enumerate}
-            \item \policyPub{4} may be delegated authority by the President to authorise publicity.
         \end{enumerate}
     \item \newthought{The Acting Director:}
         \begin{enumerate}
@@ -182,24 +177,7 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
     \item \newthought{The Technical Director:}
         \begin{enumerate}
             \item shall have overall responsibility for the Society's technical activities.
-            \item \policyCspEquip{A3, {\S}A5 \& {\S}B7} shall have overall responsibility for the Society's equipment, including its management and safe usage.
             \item shall ensure that the Society maintains an appropriate level of technical capability, in terms of both equipment and personnel, to enable the Society to achieve its objectives.
-            \item \policyCspEquip{A5.2 \& {\S}A5.3} shall be responsible overall for the training of Members in all aspects of the Society's technical activities.
-            \item \policyCspEquip{C} shall ensure that all equipment is maintained and kept securely in good safe working order, and that records are kept of this maintenance and of the equipment owned by the Society.
-            \item \policyCspEquip{A7} shall ensure that all equipment and storage is appropriately labelled.
-            \item \policyCspEquip{A6} shall ensure that appropriate records are kept and fees are lodged with the Treasurer when equipment is hired.
-        \end{enumerate}
-    \item \newthought{The Pub. Officer:}
-        \begin{enumerate}
-            \item \policyPub{4} may be delegated authority by the President to authorise publicity.
-        \end{enumerate}
-    \item \newthought{The Social Secretary:}
-        \begin{enumerate}
-            \item shall provide mandatory fun.
-        \end{enumerate}
-    \item \newthought{The Ordinary Committee Member:}
-        \begin{enumerate}
-            \item shall contribute to the running of the Society by assisting the Committee as appropriate.
         \end{enumerate}
 \end{enumerate}
 
@@ -207,7 +185,7 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
 \begin{enumerate}[resume]
     \item The President may call General Meetings of the Society.
     \item \policyCspp{74} A general meeting must be called by the President at the behest of any one of:
-        \begin{enumerate}           
+        \begin{enumerate}
             \item quorum of the Committee, or;
             \item a petition of ten or more Members made to the President in writing.
         \end{enumerate}
@@ -217,7 +195,7 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
     \item Members may submit agenda for discussion at a general meeting to the Secretary no fewer than five College days before a general meeting. Any agendum so submitted must be proposed by a Member and seconded by at least two other Members.
     \item The Secretary must distribute the agenda for the General meeting to the Members of the Society in writing no fewer than four College days in advance of a general meeting.
     \item The first agendum of any general meeting must be to accept or reject by vote the minutes of the previous general meeting, or to note any corrections as upheld by vote if necessary.
-    \item The Secretary or their delegated authority must record accurate minutes of the General meeting, which must be published in writing to the Members of the Society only at a time prior to the next meeting.
+    \item The Secretary or their delegated authority must record accurate minutes of the General meeting, which must be published in writing to the Members of the Society within 10 College days of the meeting. Attendees of the General meeting must be given the opportunity to comment on these minutes at least 3 college days before they are so published.
     \item The Secretary or their delegated authority must publish to the general public minutes which have been accepted at a General Meeting.
     \item Any Member of the Society may submit an opinion on any agenda to the Secretary \textit{in absentia}, which must be read out at the meeting by the Secretary in their stead.
     \item All decisions are made exclusively by the voting membership of the Society.
