--- a/officers.tex
+++ b/officers.tex
@@ -12,7 +12,7 @@
 
 \title{Officer Duties Bye-Law}
 % \author[The ICDS Committee]{The ICDS Committee}
-\date{Proposed at the Committee Meeting on 03/11/15}
+\date{Proposed at the General Meeting on 03/11/15}
 
 \newcommand{\policyOffset}{12pt}
 
@@ -34,7 +34,7 @@
 \itshape
 
 \begin{abstract}
-This bye-law describes in more detail the exact nature of the jobs to be carried out by the officers of the Committee.
+This bye-law assigns responsibilities to officers of the Committee.
 \end{abstract}
 \end{fullwidth}
 
@@ -43,12 +43,12 @@ This bye-law describes in more detail the exact nature of the jobs to be carried
 \section{Introduction}
 \begin{enumerate}
     \item This document shall inherit all provisions and definitions given in the Imperial College Dramatic Society Constitution (ICDS Constitution).
-    \item Where this document conflicts with the ICDS Constitution, the ICDS Constitution shall take precedence.
     \item This document shall be a bye-law of ICDS under the terms of the ICDS Constitution.
+    \item If this document conflicts with the ICDS Constitution, the ICDS Constitution shall take precedence.
     \item The following responsibilities are to be taken in addition to those mandatory duties indicated in the ICDS Constitution.
 \end{enumerate}
 
-\subsection{Responsibilities of the Offices}
+\subsection{Responsibilities of the Officers}
 \begin{enumerate}[resume]
     \item \newthought{The President:}
         \begin{enumerate}
@@ -56,22 +56,25 @@ This bye-law describes in more detail the exact nature of the jobs to be carried
             \item is ultimately responsible for the artistic output of the Society.
             \item shall liaise with COMUS to further alumnus integration.
             \item shall be responsible for ensuring that risks arising during the execution of the Society's activities are appropriately identified and mitigated.
+            \item \policyHs{26.3.4} shall be responsible for informing the Union of any controls and provisions made to identify and mitigate risks to Society Members (to include the annual submission of a risk assessment).
             \item shall be responsible for ensuring that all plays produced by the Society have assigned to them a \textsc{Producer}, who shall be a Member of the Society responsible for the execution of the play (to include its financial aspects), and who shall be answerable to the Committee. This Producer must not also be the show's director, except in the case of simple plays if considered appropriate by the committee.
             \item the authority to authorise publicity may be revoked or further devolved as the President sees fit.
     \end{enumerate}
     \item \newthought{The Vice-President:}
         \begin{enumerate}
             \item shall assist the President in the running of the Society.
+            \item \policyPub{4} may be delegated authority by the President to authorise publicity.
         \end{enumerate}
     \item \newthought{The Treasurer:}
         \begin{enumerate}
             \item shall carry out the day-to-day financial duties of the Society.
-            \item shall maintain accounts describing the Society's finances, in accordance with accepted accounting rules and practices.
+            \item shall be responsible for participating in the Union's annual budgeting process.
             \item shall ensure that an appropriately-qualified person (usually the Producer) keeps appropriate accounts for every show produced by the Society.
             \item shall inspect the budget for every show produced by the Society, and if they deem it to be acceptable, approve it.
         \end{enumerate}
     \item \newthought{The Honorary Secretary:}
         \begin{enumerate}
+            \item \policyPub{4} may be delegated authority by the President to authorise publicity.
             \item shall be responsible for minuting all meetings of the Society and maintaining a public archive of such minutes.
             \item shall be responsible for keeping records of the running of the Society and maintaining its archives in good order.
             \item shall be responsible for communicating announcements to the membership of the Society and the Committee.
@@ -84,10 +87,16 @@ This bye-law describes in more detail the exact nature of the jobs to be carried
         \end{enumerate}
     \item \newthought{The Technical Director:}
         \begin{enumerate}
-            \item shall be responsible for ensuring that a Production Manager is assigned to some events as decided by the Committee, who shall be a Member of the Society answerable to the Committee for that event. An external event is one to which the Society contributes but which the Society does not principally control or fund.
+            \item shall be responsible for ensuring that a Production Manager is assigned to all events, who shall be answerable to the Committee for that event. The Production Manager, which is not necessarily an exclusive role, may be any member of the society, including the Technical Director. An external event is one to which the Society contributes but which the Society does not principally control or fund.
             \item shall be responsible for the maintenance of the DramSoc Storeroom.
             \item shall be responsible for liaising with the Union over the management, maintenance and upkeep of the Union Concert Hall.
             \item shall represent the Society to the Union, College, other societies, and any other clients for all relevant matters as described above.
+            \item shall be responsible for the creation, regular review, and enforcement of a code of practice for technicians covering aspects of safety procedure and working practice, to which all Members of the Society must adhere.
+            \item \policyCspEquip{A3, {\S}A5 \& {\S}B7} shall have overall responsibility for the Society's equipment, including its management and safe usage.
+            \item \policyCspEquip{A5.2 \& {\S}A5.3} shall be responsible overall for the training of Members in all aspects of the Society's technical activities.
+            \item \policyCspEquip{C} shall ensure that all equipment is maintained and kept securely in good safe working order, and that records are kept of this maintenance and of the equipment owned by the Society.
+            \item \policyCspEquip{A7} shall ensure that all equipment and storage is appropriately labelled.
+            \item \policyCspEquip{A6} shall ensure that appropriate records are kept and fees are lodged with the Treasurer when equipment is hired.
             \item shall be assisted in these aims and responsibilities by the Lighting Director, the Sound Director and the Set, Props and Costumes Director as described below.
         \end{enumerate}
     \item \newthought{The Lighting Director:}
@@ -122,11 +131,12 @@ This bye-law describes in more detail the exact nature of the jobs to be carried
             \item shall be responsible for managing the Society's social media accounts.
             \item shall be responsible for the production of Society merchandise.
             \item shall ensure that photographs are taken and archived of every Society show, along with that show's publicity material.
+            \item \policyPub{4} may be delegated authority by the President to authorise publicity.
         \end{enumerate}
     \item \newthought{The Social Secretary:}
         \begin{enumerate}
             \item shall be responsible for the organisation of social events to promote the cohesion and happiness of the Members of the Society.
-            \item shall provide compulsory fun.
+            \item shall provide mandatory fun.
         \end{enumerate}
     \item \newthought{The Systems Administrator:}
         \begin{enumerate}
@@ -145,7 +155,7 @@ This bye-law describes in more detail the exact nature of the jobs to be carried
         \end{enumerate}
     \item \newthought{The Ordinary Committee Member:}
         \begin{enumerate}
-            \item shall take on responsibilities as indicated by the Committee.
+            \item shall contribute to the running of the Society by assisting the Committee as appropriate.
         \end{enumerate}
 \end{enumerate}
 
