--- a/icds-constitution.tex
+++ b/icds-constitution.tex
@@ -125,10 +125,10 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
     \item The President or their delegated authority shall chair meetings of the Committee.
     \item At least five College days' written notice of planned meetings of the Committee shall be provided by the Secretary to members of the Committee.
     \item Unplanned meetings may be held with shorter notice if there is a good reason to do so.
-    \item Only officers of the Committee may attend Committee meetings, aside from exceptions made below.
-    \item \policyBye{B11} Quorum of the Committee shall be 50\%+1 of the officers of the Committee.
-    \item Any Member of the Society may observe Committee meetings as a Guest of the Committee.
-    \item The Committee may invite other Members of the Union, or others outside of the Union as Guests of the Committee, as it sees fit.
+        \item \policyBye{B11} Quorum of the Committee shall be 50\%+1 of the officers of the Committee.
+	\item Any Member of the Society may observe Committee meetings as a Guest of the Committee.
+    \item Only voting officers of the Committee may vote at Committee meetings.
+    \item A person who is not a Member of the Society may be invited by the Committee to attend a Committee meeting as a Guest of the Committee.
     \item Guests of the Committee must ask permission from the Chair of the meeting to speak (ordinarily the President).
     \item The Secretary or their delegated authority shall circulate agenda for meetings of the Committee no less than one College day in advance of the meeting.
     \item The Secretary must circulate to the Committee a draft of the meeting's minutes within three college days of the meeting.
