We all love minutes
Changes to sections about timescales for approval and comment on
minutes, and also about reserved minutes.

--- a/icds-constitution.tex
+++ b/icds-constitution.tex
@@ -131,12 +131,15 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
     \item A person who is not a Member of the Society may be invited by the Committee to attend a Committee meeting as a Guest of the Committee.
     \item Guests of the Committee must ask permission from the Chair of the meeting to speak (ordinarily the President).
     \item The Secretary or their delegated authority shall circulate agenda for meetings of the Committee no less than one College day in advance of the meeting.
-    \item The Secretary must circulate to the Committee a draft of the meeting's minutes within three college days of the meeting.
-    \item Members may submit to the Secretary a request to view the draft non-reserved minutes. The Secretary must provide to the member the draft minutes no earlier than three College days after the draft minutes have been circulated to the Committee. Before the minutes are provided to the member, attendees to the meeting must be given the opportunity to make comment on the draft and have these comments appended. It should be made clear that these minutes are unpublished and unapproved.
+    \item The Secretary must circulate to the Committee and any Guests a draft of the meeting's minutes for their comment and opinion within five college days of the meeting.
+    \item Upon submission of a request by a Member to view draft unreserved minutes to the Secretary, the Secretary must provide to the Member the requested minutes as soon as possible, provided three College days have passed since they were circulated to the Committee and Guests.
+    \item Before draft unreserved minutes are provided to a Member, the Committee and Guests' comment and opinions should be appended to the document and it should be made clear that these minutes are unpublished and unapproved.
     \item The Secretary must publish minutes of a meeting to the general public within three College days of the minutes' approval as a true and accurate record of the meeting to which they refer by the Committee.
-    \item An archive of all non-reserved meeting minutes should be made publicly available by the Secretary.
-    \item \textit{In extremis}, a member of the Committee may request that minutes be denoted as reserved, either in part or in full, and reasons for the reservation must be included in either the unreserved minutes, the reserved minutes, or both. An indication that minutes were reserved must be present in the unreserved minutes. A request to reserve minutes may be made at any time prior to the publication of the minutes publicly.
+    \item An archive of all unreserved meeting minutes should be made publicly available by the Secretary.
+    \item \textit{In extremis}, a member of the Committee may request that minutes be denoted as reserved, either in part or in full, and reasons for the reservation must be included in either the unreserved minutes, the reserved minutes, or both. This request may be made at any time prior to the publication of the minutes to the general public.
+    \item In the event that certain minutes are reserved by the Committee, an indication that minutes were reserved must be present in the unreserved minutes.
     \item Reserved minutes may be distributed only to members of the Committee, and, upon request, to the President of the Union, a Deputy President of the Union, or the Chair of the Society's Management Group.
+    \item Reserved minutes may be unreserved at the Committee's discretion.
     \item Whilst reserved minutes are being taken, Guests of the Committee may be asked to leave by the meeting's Chair.
     \item Committee members must strive to attend all Meetings of the Committee, and are obliged to submit apologies to the Secretary if they are unable to do so for whatever reason.
 \end{enumerate}
